--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "extern/olimex-kicad"]
-	path = extern/olimex-kicad
+[submodule "external/olimex-kicad"]
+	path = external/olimex-kicad
 	url = https://github.com/OLIMEX/KiCAD
 	branch = master
